crates/protocol/src/snapshots/cookie_agent_protocol__tests__session_meta_typescript.snap
---
source: crates/protocol/src/tests.rs
expression: "SessionMeta::export_to_string(&config).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { CwdIdentity } from "./CwdIdentity";
import type { RunSelection } from "./RunSelection";
import type { SessionId } from "./SessionId";
import type { SessionMetaSchemaVersion } from "./SessionMetaSchemaVersion";
import type { SessionOrigin } from "./SessionOrigin";
import type { SessionStatus } from "./SessionStatus";
import type { SessionTitle } from "./SessionTitle";

export type SessionMeta = { meta_schema_version: SessionMetaSchemaVersion, session_id: SessionId, origin: SessionOrigin, cwd_identity: CwdIdentity, creation_selection: RunSelection, title: SessionTitle | null, title_updated_seq: number, last_event_seq: number, status: SessionStatus, };
