crates/protocol/src/snapshots/cookie_agent_protocol__tests__session_rename_schema_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: schema_for!(SessionRenameParams)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "SessionRenameParams",
  "description": "Parameters for idempotent `session.rename`.",
  "type": "object",
  "properties": {
    "change": {
      "$ref": "#/$defs/SessionRenameChange"
    },
    "client_rename_id": {
      "description": "Non-empty idempotency key without control characters.",
      "type": "string",
      "maxLength": 256,
      "minLength": 1
    },
    "session_id": {
      "type": "string",
      "format": "uuid"
    }
  },
  "additionalProperties": false,
  "required": [
    "session_id",
    "client_rename_id",
    "change"
  ],
  "$defs": {
    "SessionRenameChange": {
      "description": "User-authored title mutation for `session.rename`.",
      "oneOf": [
        {
          "type": "object",
          "properties": {
            "title": {
              "description": "Non-blank UTF-8 title without control characters.",
              "type": "string",
              "maxLength": 512,
              "minLength": 1
            },
            "type": {
              "type": "string",
              "const": "set"
            }
          },
          "additionalProperties": false,
          "required": [
            "type",
            "title"
          ]
        },
        {
          "type": "object",
          "properties": {
            "type": {
              "type": "string",
              "const": "clear"
            }
          },
          "additionalProperties": false,
          "required": [
            "type"
          ]
        },
        {
          "type": "object",
          "properties": {
            "type": {
              "type": "string",
              "const": "reset"
            }
          },
          "additionalProperties": false,
          "required": [
            "type"
          ]
        }
      ]
    }
  }
}
