crates/protocol/src/snapshots/cookie_agent_protocol__tests__session_rename_typescript_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: "SessionRenameParams::export_to_string(&typescript_config()).expect(\"export session rename TypeScript\")"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ClientRenameId } from "./ClientRenameId";
import type { SessionId } from "./SessionId";
import type { SessionRenameChange } from "./SessionRenameChange";

/**
 * Parameters for idempotent `session.rename`.
 */
export type SessionRenameParams = { session_id: SessionId, client_rename_id: ClientRenameId, change: SessionRenameChange, };
