crates/protocol/src/snapshots/cookie_agent_protocol__tests__session_title_commit_typescript_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: "SessionTitleCommit::export_to_string(&typescript_config()).expect(\"export session title commit TypeScript\")"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ClientRenameId } from "./ClientRenameId";
import type { InternalAgentInvocationId } from "./InternalAgentInvocationId";
import type { SessionTitle } from "./SessionTitle";

/**
 * Strict durable title commit. Variant shape makes source/operation identity
 * and `client_rename_id` requirements unrepresentable as invalid combinations.
 */
export type SessionTitleCommit = { "type": "user_set", title: SessionTitle, client_rename_id: ClientRenameId, } | { "type": "user_clear", client_rename_id: ClientRenameId, } | { "type": "user_reset", client_rename_id: ClientRenameId, } | { "type": "internal_agent_set", title: SessionTitle, invocation_id: InternalAgentInvocationId, } | { "type": "fallback_set", title: SessionTitle, };
