crates/protocol/src/snapshots/cookie_agent_protocol__tests__stored_event_typescript.snap
---
source: crates/protocol/src/tests.rs
expression: "StoredEvent::export_to_string(&config).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { EventPayload } from "./EventPayload";
import type { EventSchemaVersion } from "./EventSchemaVersion";
import type { RunId } from "./RunId";
import type { SessionId } from "./SessionId";

export type StoredEvent = { event_schema_version: EventSchemaVersion, session_id: SessionId, run_id: RunId | null, seq: number, timestamp: string, payload: EventPayload, };
