crates/protocol/src/snapshots/cookie_agent_protocol__tests__title_change_typescript.snap
---
source: crates/protocol/src/tests.rs
expression: "SessionTitleChange::export_to_string(&config).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ClientRenameId } from "./ClientRenameId";
import type { InternalAgentInvocationId } from "./InternalAgentInvocationId";
import type { SessionTitle } from "./SessionTitle";

export type SessionTitleChange = { "type": "user_set", title: SessionTitle, client_rename_id: ClientRenameId, } | { "type": "user_clear", client_rename_id: ClientRenameId, } | { "type": "user_reset", client_rename_id: ClientRenameId, } | { "type": "internal_agent_set", title: SessionTitle, invocation_id: InternalAgentInvocationId, } | { "type": "fallback_set", title: SessionTitle, };
