crates/protocol/src/snapshots/cookie_agent_protocol__tests__title_change_v7_golden.snap
---
source: crates/protocol/src/tests.rs
expression: "vec![SessionTitleChange::UserSet\n{\n    title: SessionTitle::new(\"Named\").unwrap(), client_rename_id:\n    ClientRenameId::new(\"rename-1\").unwrap(),\n}, SessionTitleChange::UserClear\n{ client_rename_id: ClientRenameId::new(\"rename-2\").unwrap(), },\nSessionTitleChange::UserReset\n{ client_rename_id: ClientRenameId::new(\"rename-3\").unwrap(), },\nSessionTitleChange::FallbackSet\n{ title: SessionTitle::new(\"Fallback\").unwrap(), },]"
---
[
  {
    "type": "user_set",
    "title": "Named",
    "client_rename_id": "rename-1"
  },
  {
    "type": "user_clear",
    "client_rename_id": "rename-2"
  },
  {
    "type": "user_reset",
    "client_rename_id": "rename-3"
  },
  {
    "type": "fallback_set",
    "title": "Fallback"
  }
]
