crates/protocol/src/snapshots/cookie_agent_protocol__tests__tool_termination_schema.snap
---
source: crates/protocol/src/tests.rs
expression: schema_for!(ToolCallTermination)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ToolCallTermination",
  "type": "object",
  "properties": {
    "error": {
      "anyOf": [
        {
          "$ref": "#/$defs/SafeToolError"
        },
        {
          "type": "null"
        }
      ]
    },
    "outcome": {
      "$ref": "#/$defs/ToolTerminationOutcome"
    },
    "owner": {
      "$ref": "#/$defs/AssistantToolCallRef"
    },
    "result": {
      "anyOf": [
        {
          "$ref": "#/$defs/PersistedToolResult"
        },
        {
          "type": "null"
        }
      ]
    },
    "tool_call_id": {
      "type": "string",
      "format": "uuid"
    }
  },
  "additionalProperties": false,
  "required": [
    "tool_call_id",
    "owner",
    "outcome",
    "result",
    "error"
  ],
  "$defs": {
    "ArtifactReference": {
      "type": "object",
      "properties": {
        "uri": {
          "type": "string"
        }
      },
      "additionalProperties": false,
      "required": [
        "uri"
      ]
    },
    "AssistantToolCallRef": {
      "type": "object",
      "properties": {
        "content_index": {
          "type": "integer",
          "format": "uint32",
          "minimum": 0
        },
        "model_call_id": {
          "description": "Bounded semantic model tool-call identity.",
          "type": "string",
          "maxLength": 512,
          "minLength": 1,
          "pattern": "^[^\\p{Cc}\\p{Cf}]+$"
        },
        "model_turn_seq": {
          "type": "integer",
          "format": "uint64",
          "minimum": 1
        },
        "provider_item_id": {
          "description": "Bounded provider item identity.",
          "type": [
            "string",
            "null"
          ],
          "maxLength": 512,
          "minLength": 1,
          "pattern": "^[^\\p{Cc}\\p{Cf}]+$"
        }
      },
      "additionalProperties": false,
      "required": [
        "model_turn_seq",
        "content_index",
        "model_call_id",
        "provider_item_id"
      ]
    },
    "PersistedToolResult": {
      "type": "object",
      "properties": {
        "attachments": {
          "type": "array",
          "items": {
            "$ref": "#/$defs/ToolAttachment"
          },
          "maxItems": 256
        },
        "metadata": true,
        "output": {
          "type": "string"
        },
        "title": {
          "description": "Control-free bounded presentation text.",
          "type": "string",
          "maxLength": 1024,
          "minLength": 1,
          "pattern": "^[^\\p{Cc}\\p{Cf}]+$"
        },
        "truncation": {
          "anyOf": [
            {
              "$ref": "#/$defs/ToolOutputTruncation"
            },
            {
              "type": "null"
            }
          ]
        }
      },
      "additionalProperties": false,
      "required": [
        "title",
        "output",
        "metadata",
        "truncation",
        "attachments"
      ]
    },
    "SafeToolError": {
      "type": "object",
      "properties": {
        "code": {
          "description": "Stable lowercase machine-readable code.",
          "type": "string",
          "maxLength": 128,
          "minLength": 1,
          "pattern": "^[a-z0-9][a-z0-9._-]*$"
        },
        "message": {
          "description": "Control-free bounded safe error text.",
          "type": "string",
          "maxLength": 4096,
          "minLength": 1,
          "pattern": "^[^\\p{Cc}\\p{Cf}]+$"
        }
      },
      "additionalProperties": false,
      "required": [
        "code",
        "message"
      ]
    },
    "ToolAttachment": {
      "type": "object",
      "properties": {
        "byte_length": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "filename": {
          "type": [
            "string",
            "null"
          ]
        },
        "mime_type": {
          "type": "string",
          "maxLength": 255,
          "minLength": 3,
          "pattern": "^[^/\\s]+/[^/\\s]+$"
        },
        "reference": {
          "$ref": "#/$defs/ArtifactReference"
        },
        "sha256": {
          "type": "string",
          "maxLength": 64,
          "minLength": 64,
          "pattern": "^[0-9a-f]{64}$"
        }
      },
      "additionalProperties": false,
      "required": [
        "mime_type",
        "filename",
        "byte_length",
        "sha256",
        "reference"
      ]
    },
    "ToolOutputTruncation": {
      "type": "object",
      "properties": {
        "original_bytes": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "original_lines": {
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "retained": {
          "$ref": "#/$defs/ArtifactReference"
        }
      },
      "additionalProperties": false,
      "required": [
        "original_bytes",
        "original_lines",
        "retained"
      ]
    },
    "ToolTerminationOutcome": {
      "type": "string",
      "enum": [
        "completed",
        "failed",
        "cancelled",
        "interrupted"
      ]
    }
  }
}
