crates/protocol/src/snapshots/cookie_agent_protocol__tests__tool_termination_typescript.snap
---
source: crates/protocol/src/tests.rs
expression: "ToolCallTermination::export_to_string(&config).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { AssistantToolCallRef } from "./AssistantToolCallRef";
import type { PersistedToolResult } from "./PersistedToolResult";
import type { SafeToolError } from "./SafeToolError";
import type { ToolCallId } from "./ToolCallId";
import type { ToolTerminationOutcome } from "./ToolTerminationOutcome";

export type ToolCallTermination = { tool_call_id: ToolCallId, owner: AssistantToolCallRef, outcome: ToolTerminationOutcome, result: PersistedToolResult | null, error: SafeToolError | null, };
